--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -275,15 +275,15 @@
           <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donante</font></b></h1>
           <table class="user" width="100%" >
           <tr>
-            <td colspan="4" align="center" style=";border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><h4>Datos Personales</h4></td>
+            <td colspan="4" align="center" style=";border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Datos Personales</b></td>
             <td>&nbsp;</td>
-            <td align="center" style="border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><h4>Pol&iacute;ticas para el Donante</h4></td>
+            <td align="center" style="border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Pol&iacute;ticas para el Donante</b></td>
           </tr>
           <tr>
             <td width="7%">&nbsp;<b>Cedula</b></td>
             <td width="17%"><input type="number" class="form-control form-control-user" id="exampleCedula"></td>
             <td width="7%">&nbsp;<b>Sexo</b></td>
-            <td width="17%"><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
+            <td width="17%"><select class="btn btn-secondary dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
                         	<option selected>Seleccione</option>
                         	<option>Masculino</option>
                             <option>Femenino</option>
