--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -280,6 +280,14 @@
             <td align="center" style="color:#333;background-color:#CCC;border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Pol&iacute;ticas para el Donante</b></td>
           </tr>
           <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
             <td width="7%">&nbsp;<b>Cedula</b></td>
             <td width="17%"><input type="number" class="form-control form-control-user" id="exampleCedula"></td>
             <td width="7%">&nbsp;<b>Sexo</b></td>
