--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -280,16 +280,15 @@
             <td align="center" style="color:#333;background-color:#CCC;border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Pol&iacute;ticas para el Donante</b></td>
           </tr>
           <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td width="7%">&nbsp;</td>
+            <td width="17%">&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
           </tr>
           <tr>
-            <td width="7%">&nbsp;<b>Cedula</b></td>
-            <td width="17%"><input type="number" class="form-control form-control-user" id="exampleCedula"></td>
+            <td colspan="2"><input type="number" class="form-control form-control-user" id="exampleCedula" placeholder="C&eacute;dula"></td>
             <td width="7%">&nbsp;<b>Sexo</b></td>
             <td width="17%"><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
                         	<option selected>Seleccione</option>
@@ -300,34 +299,26 @@
             <td width="40%">&nbsp;</td>
           </tr>
           <tr>
-            <td>&nbsp;<b>Nombre</b></td>
-            <td><input type="text" class="form-control form-control-user" id="exampleFirstName"></td>
-            <td>&nbsp;<b>Apellido</b></td>
-            <td><input type="text" class="form-control form-control-user" id="exampleLastName"></td>
+            <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Nombre"></td>
+            <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Apellido"></td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
           </tr>
           <tr>
-              <td>&nbsp;<b>Lugar de Nacimiento</b></td>
-            <td><input type="text" class="form-control form-control-user" id="exampleLugNac"></td>
-            <td>&nbsp;<b>Localidad</b></td>
-            <td><input type="text" class="form-control form-control-user" id="exampleLocalidad"></td>
+              <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleLugNac" placeholder="Lugar de Nacimiento"></td>
+            <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleLocalidad" placeholder="Localidad"></td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
           </tr>
           <tr>
-              <td>&nbsp;<b>Fecha Nacimiento</b></td>
-            <td><input type="date" class="form-control form-control-user" id="exampleFecNac"></td>
-            <td>&nbsp;<b>Telefono</b></td>
-            <td><input type="text" class="form-control form-control-user" id="exampleTelefono"></td>
+              <td colspan="2"><input type="date" class="form-control form-control-user" id="exampleFecNac" placeholder="Fecha Nacimiento"></td>
+            <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleTelefono" placeholder="Tel&eacute;fono"></td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
           </tr>
           <tr>
-              <td>&nbsp;<b>Email</b></td>
-            <td><input type="email" class="form-control form-control-user" id="exampleEmail"></td>
-            <td>&nbsp;<b>C&oacute;digo Postal</b></td>
-            <td><input type="text" class="form-control form-control-user" id="exampleCodPostal"></td>
+              <td colspan="2"><input type="email" class="form-control form-control-user" id="exampleEmail" placeholder="Email"></td>
+            <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleCodPostal" placeholder="C&oacute;digo Postal"></td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
           </tr>
