--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -282,21 +282,26 @@
           <tr>
             <td width="7%">&nbsp;</td>
             <td width="17%">&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td width="7%">&nbsp;</td>
+            <td width="17%">&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
           </tr>
           <tr>
             <td colspan="2"><input type="number" class="form-control form-control-user" id="exampleCedula" placeholder="C&eacute;dula"></td>
-            <td width="7%">&nbsp;<b>Sexo</b></td>
-            <td width="17%"><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
+            <td colspan="2">&nbsp;</td>
+            <td width="2%">&nbsp;</td>
+            <td width="40%">&nbsp;</td>
+          </tr>
+          <tr>
+            <td colspan="2"><b>Sexo</b>&nbsp;<select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
                         	<option selected>Seleccione</option>
                         	<option>Masculino</option>
                             <option>Femenino</option>
                     		</select></td>
-            <td width="2%">&nbsp;</td>
-            <td width="40%">&nbsp;</td>
+            <td colspan="2">&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
           </tr>
           <tr>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Nombre"></td>
