--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -277,21 +277,23 @@
           <tr>
             <td colspan="4" align="center" style="color:#333;background-color:#CCC;border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Datos Personales</b></td>
             <td>&nbsp;</td>
-            <td align="center" style="color:#333;background-color:#CCC;border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Pol&iacute;ticas para el Donante</b></td>
+            <td colspan="3" align="center" style="color:#333;background-color:#CCC;border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Pol&iacute;ticas para el Donante</b></td>
           </tr>
           <tr>
-            <td width="7%">&nbsp;</td>
-            <td width="17%">&nbsp;</td>
-            <td width="7%">&nbsp;</td>
-            <td width="17%">&nbsp;</td>
+            <td width="8%">&nbsp;</td>
+            <td width="18%">&nbsp;</td>
+            <td width="8%">&nbsp;</td>
+            <td width="18%">&nbsp;</td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td width="35%">¿Don&oacute; sangre en los 3 &uacute;ltimos a&ntilde;os?</td>
+            <td width="5%"><input name="Si" type="checkbox" value="1"> Si</td>
+            <td width="5%"><input name="No" type="checkbox" value="0"> No</td>
           </tr>
           <tr>
             <td colspan="2"><input type="number" class="form-control form-control-user" id="exampleCedula" placeholder="C&eacute;dula"></td>
             <td colspan="2">&nbsp;</td>
-            <td width="2%">&nbsp;</td>
-            <td width="40%">&nbsp;</td>
+            <td width="3%">&nbsp;</td>
+            <td colspan="3">&nbsp;</td>
           </tr>
           <tr>
             <td colspan="2"><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
@@ -301,31 +303,31 @@
                     		</select></td>
             <td colspan="2">&nbsp;</td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td colspan="3">&nbsp;</td>
           </tr>
           <tr>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Nombre"></td>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Apellido"></td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td colspan="3">&nbsp;</td>
           </tr>
           <tr>
               <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleLugNac" placeholder="Lugar de Nacimiento"></td>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleLocalidad" placeholder="Localidad"></td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td colspan="3">&nbsp;</td>
           </tr>
           <tr>
               <td colspan="2"><input type="date" class="form-control form-control-user" id="exampleFecNac" placeholder="Fecha Nacimiento"></td>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleTelefono" placeholder="Tel&eacute;fono"></td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td colspan="3">&nbsp;</td>
           </tr>
           <tr>
               <td colspan="2"><input type="email" class="form-control form-control-user" id="exampleEmail" placeholder="Email"></td>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleCodPostal" placeholder="C&oacute;digo Postal"></td>
             <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td colspan="3">&nbsp;</td>
           </tr>
           </table>
 
