--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -285,17 +285,15 @@
             <td width="8%">&nbsp;</td>
             <td width="18%">&nbsp;</td>
             <td>&nbsp;</td>
-            <td width="35%">&nbsp;</td>
-            <td width="5%">&nbsp;</td>
-            <td width="5%">&nbsp;</td>
-          </tr>
+            <td colspan="3" style="color:#333;background-color:#EBEBEB;border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Condiciones Generales</b></td>
+            </tr>
           <tr>
             <td colspan="2"><input type="number" class="form-control form-control-user" id="exampleCedula" placeholder="C&eacute;dula"></td>
             <td colspan="2">&nbsp;</td>
             <td width="3%">&nbsp;</td>
-            <td>¿Don&oacute; sangre en los 3 &uacute;ltimos a&ntilde;os?</td>
-            <td><input name="Si" type="checkbox" value="1"> Si</td>
-            <td><input name="No" type="checkbox" value="0"> No</td>
+            <td width="35%">¿Don&oacute; sangre en los 3 &uacute;ltimos a&ntilde;os?</td>
+            <td width="5%"><input name="Si" type="checkbox" value="1"> Si</td>
+            <td width="5%"><input name="No" type="checkbox" value="0"> No</td>
           </tr>
           <tr>
             <td colspan="2"><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
@@ -329,10 +327,8 @@
               <td colspan="2"><input type="date" class="form-control form-control-user" id="exampleFecNac" placeholder="Fecha Nacimiento"></td>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleTelefono" placeholder="Tel&eacute;fono"></td>
             <td>&nbsp;</td>
-            <td><b>Impedimentos para donar</b></td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-          </tr>
+            <td colspan="3" style="color:#333;background-color:#EBEBEB;border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Impedimentos para donar</b></td>
+            </tr>
           <tr>
               <td colspan="2"><input type="email" class="form-control form-control-user" id="exampleEmail" placeholder="Email"></td>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleCodPostal" placeholder="C&oacute;digo Postal"></td>
