--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -280,8 +280,8 @@
             <td colspan="3" align="center" style="color:#333;background-color:#CCC;border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Pol&iacute;ticas para el Donante</b></td>
           </tr>
           <tr>
-            <td width="8%">&nbsp;</td>
-            <td width="18%">&nbsp;</td>
+            <td width="16%">&nbsp;</td>
+            <td width="9%">&nbsp;</td>
             <td width="8%">&nbsp;</td>
             <td width="18%">&nbsp;</td>
             <td>&nbsp;</td>
@@ -293,11 +293,11 @@
             <td width="3%">&nbsp;</td>
             <td width="35%">¿Don&oacute; sangre en los 3 &uacute;ltimos a&ntilde;os?</td>
             <td width="5%"><input name="Si" type="checkbox" value="1"> Si</td>
-            <td width="5%"><input name="No" type="checkbox" value="0"> No</td>
+            <td width="6%"><input name="No" type="checkbox" value="0"> No</td>
           </tr>
           <tr>
             <td colspan="2"><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
-                        	<option selected>Seleccione Sexo</option>
+                        	<option selected>G&eacute;nero</option>
                         	<option>Masculino</option>
                             <option>Femenino</option>
                     		</select></td>
@@ -332,6 +332,40 @@
           <tr>
               <td colspan="2"><input type="email" class="form-control form-control-user" id="exampleEmail" placeholder="Email"></td>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleCodPostal" placeholder="C&oacute;digo Postal"></td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
+                        	<option selected>Provincia</option>
+                        	<option>Guayas</option>
+                    		</select></td>
+            <td colspan="2"><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleCiudad">
+                        	<option selected>Ciudad</option>
+                        	<option>Guayaquil</option>
+                    		</select></td>
+            <td><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleCanton">
+                        	<option selected>Cant&oacute;n</option>
+                        	<option>Guayaquil</option>
+                    		</select></td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td colspan="2">&nbsp;</td>
+            <td colspan="2">&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td colspan="2">&nbsp;</td>
+            <td colspan="2">&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
