--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -296,7 +296,7 @@
             <td width="6%"><input name="No" type="checkbox" value="0"> No</td>
           </tr>
           <tr>
-            <td colspan="2"><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
+            <td colspan="2"><select style="border-bottom:1px" class="form-control form-control-user" name="exampleProvincia">
                         	<option selected>G&eacute;nero</option>
                         	<option>Masculino</option>
                             <option>Femenino</option>
@@ -338,11 +338,11 @@
             <td>&nbsp;</td>
           </tr>
           <tr>
-            <td><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleProvincia">
+            <td><select style="border-bottom:1px" class="form-control form-control-user" name="exampleProvincia">
                         	<option selected>Provincia</option>
                         	<option>Guayas</option>
                     		</select></td>
-            <td colspan="2"><select class="btn btn-light dropdown-toggle" style="border-bottom:#999; border:1px;" name="exampleCiudad">
+            <td colspan="2"><select style="border-bottom:1px" class="form-control form-control-user" style="border-bottom:#999; border:1px;" name="exampleCiudad">
                         	<option selected>Ciudad</option>
                         	<option>Guayaquil</option>
                     		</select></td>
