--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -275,9 +275,9 @@
           <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donante</font></b></h1>
           <table class="user" width="100%" >
           <tr>
-            <td colspan="4" align="center" style="color:#333;background-color:#CCC;border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Datos Personales</b></td>
+            <td colspan="4" align="center" style="color:#333;background-color:#FF5B5B;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Datos Personales</b></td>
             <td>&nbsp;</td>
-            <td colspan="3" align="center" style="color:#333;background-color:#CCC;border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Pol&iacute;ticas para el Donante</b></td>
+            <td colspan="3" align="center" style="color:#333;background-color:#FF5B5B;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Pol&iacute;ticas para el Donante</b></td>
           </tr>
           <tr>
             <td width="16%">&nbsp;</td>
@@ -285,7 +285,7 @@
             <td width="8%">&nbsp;</td>
             <td width="18%">&nbsp;</td>
             <td>&nbsp;</td>
-            <td colspan="3" style="color:#333;background-color:#EBEBEB;border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Condiciones Generales</b></td>
+            <td colspan="3" style="color:#333;background-color:#FFB9B9;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Condiciones Generales</b></td>
             </tr>
           <tr>
             <td colspan="2"><input type="number" class="form-control form-control-user" id="exampleCedula" placeholder="C&eacute;dula"></td>
@@ -327,7 +327,7 @@
               <td colspan="2"><input type="date" class="form-control form-control-user" id="exampleFecNac" placeholder="Fecha Nacimiento"></td>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleTelefono" placeholder="Tel&eacute;fono"></td>
             <td>&nbsp;</td>
-            <td colspan="3" style="color:#333;background-color:#EBEBEB;border-color:#CCC;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Impedimentos para donar</b></td>
+            <td colspan="3" style="color:#333;background-color:#FFB9B9;border-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px"><b>Impedimentos para donar</b></td>
             </tr>
           <tr>
               <td colspan="2"><input type="email" class="form-control form-control-user" id="exampleEmail" placeholder="Email"></td>
