--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -285,7 +285,7 @@
             <td width="8%">&nbsp;</td>
             <td width="18%">&nbsp;</td>
             <td>&nbsp;</td>
-            <td colspan="3" style="color:#333;background-color:#FFB9B9;"><b>Condiciones Generales</b></td>
+            <td colspan="3" style="color:#333;background-color:#CCC;"><b>Condiciones Generales</b></td>
             </tr>
           <tr>
             <td colspan="2"><input type="number" class="form-control form-control-user" id="exampleCedula" placeholder="C&eacute;dula"></td>
@@ -327,7 +327,7 @@
               <td colspan="2"><input type="date" class="form-control form-control-user" id="exampleFecNac" placeholder="Fecha Nacimiento"></td>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="exampleTelefono" placeholder="Tel&eacute;fono"></td>
             <td>&nbsp;</td>
-            <td colspan="3" style="color:#333;background-color:#FFB9B9;"><b>Impedimentos para donar</b></td>
+            <td colspan="3" style="color:#333;background-color:#CCC;"><b>Impedimentos para donar</b></td>
             </tr>
           <tr>
               <td colspan="2"><input type="email" class="form-control form-control-user" id="exampleEmail" placeholder="Email"></td>
