--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -275,9 +275,9 @@
           <h1 class="h3 mb-4 text-gray-800"><b><font style="color:#B03A2E">Nuevo Donante</font></b></h1>
           <table class="user" width="100%" >
           <tr>
-            <td colspan="4" align="center" style="color:#333;background-color:#858796;"><b>Datos Personales</b></td>
+            <td colspan="4" align="center" class="table-warning"><b>Datos Personales</b></td>
             <td>&nbsp;</td>
-            <td colspan="3" align="center" style="color:#333;background-color:#858796;"><b>Pol&iacute;ticas para el Donante</b></td>
+            <td colspan="3" align="center" class="table-warning"><b>Pol&iacute;ticas para el Donante</b></td>
           </tr>
           <tr>
             <td width="16%">&nbsp;</td>
