--- a/NuevoDonante.html
+++ b/NuevoDonante.html
@@ -357,7 +357,7 @@
           </tr>
           <tr>
             <td colspan="2"><input type="text" class="form-control form-control-user" id="examplePacDonar" placeholder="Paciente a donar"></td>
-            <td colspan="2"><a href="https://imgbb.com/"><img src="https://i.ibb.co/2Ywympd/logo.png" alt="logo" border="0" width="30px" height="30px"></a></td>
+            <td colspan="2">Guardar mi Ubicaci&oacute;n &nbsp;<a href="https://imgbb.com/"><img src="https://i.ibb.co/2Ywympd/logo.png" alt="logo" border="0" width="30px" height="30px"></a></td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
